Fixed Horizontal Scrolling

--- a/blocks/page.css
+++ b/blocks/page.css
@@ -12,7 +12,7 @@
   max-width: 880px;
   width: 100%;
   position: relative;
-  margin: 0 200px;
+  margin: 0 auto;
   padding: 0;
 }
 
